uuid named as apikey to Application
